--- a/生男生女的理论.md
+++ b/生男生女的理论.md
@@ -1,6 +1,8 @@
-来源: [知乎][0] &nbsp;&nbsp; 作者: [土示尘者是命也][1] &nbsp;&nbsp; 出处: [地址][2]
+来源: [知乎][0] 
 [0]:https://www.zhihu.com/"知乎"
+作者: [土示尘者是命也][1]
 [1]:https://www.zhihu.com/people/sumeixianghui/activities"土示尘者是命也"
+出处: [地址][2]
 [2]:https://www.zhihu.com/question/264243956/answer/281052149"文章地址"
 
         生物老师科学预测生男生女。
