--- a/生男生女的理论.md
+++ b/生男生女的理论.md
@@ -1,9 +1,7 @@
-来源: [知乎][] 
-作者: [土示尘者是命也][]
-出处: [地址][]
-
-[知乎]:https://www.zhihu.com/ "知乎"
-[土示尘者是命也]:https://www.zhihu.com/people/sumeixianghui/activities "土示尘者是命也"
+作者: [土示尘者是命也][] &nbsp;&nbsp;&nbsp;出处: [地址][]&nbsp;&nbsp;&nbsp;来源: [知乎][] 
+-
+[知乎]:https://www.zhihu.com/ "知乎首页"
+[土示尘者是命也]:https://www.zhihu.com/people/sumeixianghui/activities "土示尘者是命也, 首页"
 [地址]:https://www.zhihu.com/question/264243956/answer/281052149 "文章地址"
 
         生物老师科学预测生男生女。
